--- a/app/src/main/res/layout/event_detail_fragment.xml
+++ b/app/src/main/res/layout/event_detail_fragment.xml
@@ -1,211 +1,223 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="1">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight=".2"
-        android:gravity="center"
-        android:orientation="vertical">
-
-        <com.ymca.CustomFont.PrimaryFontText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:text="xxxxxxxxx"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/text_size_common_22"
-            android:textStyle="bold"
-            app:fontName="@string/custom_primary_font" />
-
-        <com.ymca.CustomFont.SecondaryFontText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:text="xxxxxxxxx"
-            android:textColor="@color/colorPrimary"
-            android:textSize="@dimen/text_size_common_16"
-            android:textStyle="bold"
-            app:fontNames="@string/custom_secondary_font" />
-
-        <com.ymca.CustomFont.SecondaryFontText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/event_detail_icon"
-            android:gravity="center"
-            android:text="xxxxxxxxx"
-            android:textColor="@color/colorScheduleBottomSelect"
-            android:textSize="@dimen/text_size_common_13"
-            app:fontNames="@string/custom_secondary_font" />
-    </LinearLayout>
-
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/colorGray" />
+        android:layout_height="10dp"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/bottom_img" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight=".4"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:weightSum="1">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="1">
-
-            <View
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight=".025"
-                android:background="@color/colorPrimary" />
+            android:layout_weight=".2"
+            android:gravity="center"
+            android:orientation="vertical">
 
             <com.ymca.CustomFont.PrimaryFontText
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight=".99"
-                android:paddingLeft="@dimen/padding_common_5"
-                android:text="@string/event_info"
+                android:gravity="center_horizontal"
+                android:text="xxxxxxxxx"
                 android:textColor="@android:color/black"
+                android:textSize="@dimen/text_size_common_22"
+                android:textStyle="bold"
+                app:fontName="@string/custom_primary_font" />
+
+            <com.ymca.CustomFont.SecondaryFontText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text="xxxxxxxxx"
+                android:textColor="@color/colorPrimary"
                 android:textSize="@dimen/text_size_common_16"
                 android:textStyle="bold"
-                app:fontNames="@string/custom_primary_font" />
-        </LinearLayout>
+                app:fontNames="@string/custom_secondary_font" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <View
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight=".025"
-                android:background="@color/colorPrimary" />
-
-            <ScrollView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight=".99"
-                android:padding="@dimen/padding_common_5">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-
-                    <com.ymca.CustomFont.SecondaryFontText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="I used TextViews in this example, but you can use whatever you want for the footer views. To avoid the footer items overlapping with the bottom of the menu, add some dummy items to the end of your menu resource file (these will act like spacers"
-                        android:textSize="@dimen/text_size_common_12"
-                        app:fontNames="@string/custom_secondary_font" />
-                </LinearLayout>
-            </ScrollView>
+            <com.ymca.CustomFont.SecondaryFontText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/event_detail_icon"
+                android:gravity="center"
+                android:text="xxxxxxxxx"
+                android:textColor="@color/colorScheduleBottomSelect"
+                android:textSize="@dimen/text_size_common_13"
+                app:fontNames="@string/custom_secondary_font" />
         </LinearLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@color/colorGray" />
-    </LinearLayout>
-
-    <com.ymca.CustomFont.PrimaryFontText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/padding_common_5"
-        android:text="@string/location"
-        android:textColor="@android:color/black"
-        android:textSize="@dimen/text_size_common_16"
-        android:textStyle="bold"
-        app:fontNames="@string/custom_primary_font" />
-
-    <com.ymca.CustomFont.SecondaryFontText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/event_info"
-        android:textColor="@color/colorScheduleTab"
-        android:textSize="@dimen/text_size_common_12"
-        app:fontNames="@string/custom_primary_font"
-        android:paddingBottom="@dimen/padding_common_5"
-        android:id="@+id/showMapButton"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight=".4">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="@dimen/padding_common_5"
-            android:weightSum="1"
-            >
-
-            <!--<LinearLayout-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_weight=".40"-->
-            <!--android:orientation="horizontal">-->
-
-            <ImageButton
-                android:layout_width="0dp"
-                android:layout_weight=".4"
-                android:layout_height="match_parent"
-                android:background="@null"
-                android:scaleType="fitCenter"
-                android:src="@drawable/event_detail_calendar" />
-            <!--</LinearLayout>-->
+            android:layout_height="0dp"
+            android:layout_weight=".4"
+            android:orientation="vertical"
+            android:weightSum="1">
 
             <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight=".6"
-                android:gravity="end"
-                android:orientation="horizontal">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="1">
 
-                <ImageView
-                    android:layout_width="wrap_content"
+                <View
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="@dimen/margin_common_5"
-                    android:padding="@dimen/padding_common_2"
-                    android:src="@drawable/detail_share" />
+                    android:layout_weight=".025"
+                    android:background="@color/colorPrimary" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="@dimen/margin_common_5"
-                    android:padding="@dimen/padding_common_2"
-                    android:src="@drawable/detail_faceook" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="@dimen/margin_common_5"
-                    android:padding="@dimen/padding_common_2"
-                    android:src="@drawable/detail_twitter" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="@dimen/margin_common_5"
-                    android:padding="@dimen/padding_common_2"
-                    android:src="@drawable/detail_linkindi" />
+                <com.ymca.CustomFont.PrimaryFontText
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".99"
+                    android:paddingLeft="@dimen/padding_common_5"
+                    android:text="@string/event_info"
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/text_size_common_16"
+                    android:textStyle="bold"
+                    app:fontNames="@string/custom_primary_font" />
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".025"
+                    android:background="@color/colorPrimary" />
+
+                <ScrollView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".99"
+                    android:padding="@dimen/padding_common_5">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+
+                        <com.ymca.CustomFont.SecondaryFontText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="I used TextViews in this example, but you can use whatever you want for the footer views. To avoid the footer items overlapping with the bottom of the menu, add some dummy items to the end of your menu resource file (these will act like spacers"
+                            android:textSize="@dimen/text_size_common_12"
+                            app:fontNames="@string/custom_secondary_font" />
+                    </LinearLayout>
+                </ScrollView>
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorGray" />
+        </LinearLayout>
+
+        <com.ymca.CustomFont.PrimaryFontText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/padding_common_5"
+            android:text="@string/location"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/text_size_common_16"
+            android:textStyle="bold"
+            app:fontNames="@string/custom_primary_font" />
+
+        <com.ymca.CustomFont.SecondaryFontText
+            android:id="@+id/showMapButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/padding_common_5"
+            android:text="505,Even street downtown"
+            android:paddingLeft="@dimen/padding_common_8"
+            android:textColor="@color/colorScheduleTab"
+            android:textSize="@dimen/text_size_common_12"
+            app:fontNames="@string/custom_primary_font" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight=".4">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="@dimen/padding_common_5"
+                android:weightSum="1">
+
+                <!--<LinearLayout-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_weight=".40"-->
+                <!--android:orientation="horizontal">-->
+
+                <ImageButton
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".4"
+                    android:background="@null"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/event_detail_calendar" />
+                <!--</LinearLayout>-->
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".6"
+                    android:gravity="end"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="@dimen/margin_common_5"
+                        android:padding="@dimen/padding_common_2"
+                        android:src="@drawable/detail_share" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="@dimen/margin_common_5"
+                        android:padding="@dimen/padding_common_2"
+                        android:src="@drawable/detail_faceook" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="@dimen/margin_common_5"
+                        android:padding="@dimen/padding_common_2"
+                        android:src="@drawable/detail_twitter" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="@dimen/margin_common_5"
+                        android:padding="@dimen/padding_common_2"
+                        android:src="@mipmap/insta" />
+                </LinearLayout>
+
+
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
-
-</LinearLayout>
+</RelativeLayout>
