--- a/app/src/main/res/layout/trainer_detail_fragment.xml
+++ b/app/src/main/res/layout/trainer_detail_fragment.xml
@@ -56,7 +56,7 @@
                     android:drawablePadding="@dimen/padding_common_5"
                     android:gravity="center_vertical"
                     android:padding="@dimen/padding_common_5"
-                    android:text="@string/instructor_info"
+                    android:text="@string/ecperience"
                     android:textColor="@android:color/black"
                     android:textSize="@dimen/margin_common_16"
                     android:textStyle="bold"
@@ -87,8 +87,7 @@
                     android:textColor="@android:color/black"
                     android:textSize="@dimen/margin_common_16"
                     android:textStyle="bold"
-                    app:fontNames="@string/custom_primary_font"
-                    android:visibility="gone"/>
+                    app:fontNames="@string/custom_primary_font" />
 
                 <LinearLayout
                     android:id="@+id/certificateLayout"
@@ -96,8 +95,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/certificationTag"
                     android:orientation="vertical"
-                    android:paddingLeft="@dimen/padding_common_5"
-                    android:visibility="gone"/>
+                    android:paddingLeft="@dimen/padding_common_5"/>
 
 
 
@@ -112,7 +110,7 @@
                     android:drawablePadding="@dimen/padding_common_5"
                     android:gravity="center_vertical"
                     android:padding="@dimen/padding_common_5"
-                    android:text="@string/clas_activit"
+                    android:text="@string/fun"
                     android:textColor="@android:color/black"
                     android:textSize="@dimen/margin_common_16"
                     android:textStyle="bold"
@@ -125,12 +123,6 @@
                     android:layout_below="@+id/certificationTag"
                     android:orientation="vertical"
                     android:paddingLeft="@dimen/padding_common_5"/>
-
-                <ListView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/instructorList"/>
-
             </LinearLayout>
         </ScrollView>
         <View
