--- a/app/src/main/res/layout/class_item.xml
+++ b/app/src/main/res/layout/class_item.xml
@@ -3,15 +3,22 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:focusable="false">
-
+    <TextView
+        android:layout_width="5dp"
+        android:layout_height="match_parent"
+        android:background="@color/colorTextPurple"
+        android:visibility="gone"
+        android:id="@+id/colorText"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="@dimen/padding_common_5"
-        android:weightSum="1">
+        android:weightSum="1"
+        android:id="@+id/classLayout">
+
 
         <com.ymca.CustomFont.SecondaryFontText
             android:layout_width="0dp"
@@ -34,10 +41,11 @@
 
             <ImageButton
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:background="@null"
                 android:src="@drawable/arrow_gray"
-                android:focusable="false" />
+                android:focusable="false"
+                android:id="@+id/imgButton"/>
         </LinearLayout>
     </LinearLayout>
 
