--- a/app/src/main/res/layout/event_items.xml
+++ b/app/src/main/res/layout/event_items.xml
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/event_date_bg_one"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:padding="@dimen/padding_common_5"
         android:weightSum="1"
         android:layout_alignParentTop="true"
@@ -36,34 +36,33 @@
         >
         <com.ymca.CustomFont.PrimaryFontText
             android:id="@+id/eventDay"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Mon"
+            android:text="08:30"
             android:textColor="@android:color/white"
-            android:textSize="@dimen/text_size_common_16"
-            android:textStyle="bold"
+            android:textSize="@dimen/text_size_common_13"
             app:fontName="@string/custom_primary_font"/>
         <com.ymca.CustomFont.PrimaryFontText
             android:id="@+id/eventDate"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="01"
             android:textColor="@android:color/white"
             android:textSize="@dimen/text_size_common_22"
             android:textStyle="bold"
-            app:fontName="@string/custom_primary_font"/>
+            app:fontName="@string/custom_primary_font"
+            android:visibility="gone"/>
 
         <com.ymca.CustomFont.SecondaryFontText
             android:id="@+id/eventMonth"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Aug"
+            android:text="11:30"
             android:textColor="@android:color/white"
             android:textSize="@dimen/text_size_common_13"
-            android:textStyle="bold"
             app:fontNames="@string/custom_secondary_font"/>
     </LinearLayout>
 
