--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -8,7 +8,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".5">
+        android:layout_weight=".5"
+        android:background="@android:color/white">
 
         <android.support.v4.view.ViewPager
             android:id="@+id/frame"
@@ -131,7 +132,7 @@
     <ImageButton
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".02"
+        android:layout_weight=".03"
         android:background="@drawable/bottom_img"/>
 
 </LinearLayout>
