--- a/app/src/main/res/layout/notification_fragment.xml
+++ b/app/src/main/res/layout/notification_fragment.xml
@@ -12,7 +12,9 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="1"
-        android:paddingBottom="@dimen/padding_common_5">
+        android:paddingBottom="@dimen/padding_common_5"
+        android:paddingTop="@dimen/padding_common_5"
+        >
 
         <com.ymca.CustomFont.PrimaryFontText
             android:layout_width="0dp"
@@ -31,7 +33,8 @@
             android:layout_height="match_parent"
             android:src="@drawable/call_icon"
             android:layout_weight=".2"
-            android:scaleType="fitCenter"/>
+            android:scaleType="fitCenter"
+            android:id="@+id/callButton"/>
     </LinearLayout>
 
     <ListView
