--- a/app/src/main/res/layout/call_pop_up.xml
+++ b/app/src/main/res/layout/call_pop_up.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="@dimen/padding_common_5"
-        android:background="@drawable/layout_border">
+        android:background="@drawable/layout_black_border">
 
         <LinearLayout
             android:id="@+id/callNumer1"
