--- a/app/src/main/res/layout/my_card_fragment.xml
+++ b/app/src/main/res/layout/my_card_fragment.xml
@@ -35,13 +35,22 @@
     <!--android:smoothScrollbar="true" />-->
     <!--</LinearLayout>-->
 
-    <android.support.v7.widget.RecyclerView
+    <ListView
         android:id="@+id/recyclerCardList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight=".8"
         android:scrollbarStyle="insideOverlay"
-        android:scrollbars="none" />
+        android:scrollbars="none"
+        android:divider="@android:color/white"
+        android:dividerHeight="5dp"/>
+    <!--<android.support.v7.widget.RecyclerView-->
+        <!--android:id="@+id/recyclerCardList"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="0dp"-->
+        <!--android:layout_weight=".8"-->
+        <!--android:scrollbarStyle="insideOverlay"-->
+        <!--android:scrollbars="none" />-->
 
     <LinearLayout
         android:layout_width="match_parent"
