--- a/app/src/main/res/layout/my_card_items.xml
+++ b/app/src/main/res/layout/my_card_items.xml
@@ -6,11 +6,13 @@
     android:orientation="horizontal"
     android:weightSum="1"
     android:focusable="false"
-    android:padding="@dimen/padding_common_5">
+    android:paddingBottom="@dimen/padding_common_10"
+    android:paddingTop="@dimen/padding_common_10"
+    android:id="@+id/cardLayout">
 
     <ImageView
         android:layout_width="0dp"
-        android:layout_height="48dp"
+        android:layout_height="55dp"
         android:layout_weight=".2"
         android:src="@drawable/card_holder_new"
         android:focusable="false"/>
@@ -24,6 +26,7 @@
         android:padding="@dimen/padding_common_5"
         android:gravity="center_vertical"
         android:weightSum="1"
+        android:id="@+id/customLayout"
         >
 
         <com.ymca.CustomFont.PrimaryFontText
