--- a/app/src/main/res/menu/home.xml
+++ b/app/src/main/res/menu/home.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-    <item android:id="@+id/delete"
-        android:icon="@android:drawable/ic_delete"
-        android:title="delete" />
+    <!--<item android:id="@+id/delete"-->
+        <!--android:icon="@android:drawable/ic_delete"-->
+        <!--android:title="delete" />-->
 
 </menu>
